[package]
name = "conventional-commit-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.0"
lsp-types = "0.94.0"
tree-sitter = "0.20.10"
lazy_static = "1.4.0"
serde_json = "1"
serde = "1"
# opentelemetry = "0.19.0" # local logging only, for the moment.
crop = "0.3.0"
tree-sitter-gitcommit = "0.3.2"
