[package]
name = "base"
version = "0.1.0"
edition = "2021"
license = "APACHE-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.0"
lsp-types = "0.94.0"
tree-sitter = "0.20.10"
lazy_static = "1.4.0"
serde_json = "1"
serde = "1"
crop = "0.3.0"
tree-sitter-gitcommit = "0.3.3"
regex = "1"
atty = "0.2.14"
tracing = {version = "0.1", optional = true }
tracing-subscriber = {version = "0.3", optional = true, features = ["registry"]}
indexmap = {version = "2", features = ["serde"] }

[dependencies.sentry]
version = "0.31.5"
default-features = false
features = [
  # defaults, less "transport"
  "backtrace", "contexts", "debug-images", "panic",
  # transport stack
  "reqwest", "rustls",
  # profiling + tracing tools
  "profiling", "tracing",
]
optional = true


[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# TODO: separate error reporting feature
telemetry = ["dep:sentry", "tracing"]

# [profile.release]
# lto = true
