[package]
name = "base"
version = "0.0.4"
edition = "2021"
license = "APACHE-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
tree-sitter = "0.22.2"
lazy_static = "1.4.0"
serde_json = "1"
serde = "1"
crop = "0.3.0"
tree-sitter-gitcommit = "0.3.3"
regex = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
  "registry",
] }
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", optional = true }
[dependencies.sentry]
version = "0.31.6"
default-features = false
features = [
  # defaults, less "transport"
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  # transport stack
  "reqwest",
  "rustls",
  # profiling + tracing tools
  "tracing",
]
optional = true


[features]
cli = ["dep:clap"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# TODO: separate error reporting feature
telemetry = ["dep:sentry", "tracing"]

[[bin]]
name = "base_language_server"
required-features = ["cli"]
# [profile.release]
# lto = true

[target.aarch64-apple-darwin]
debug = false # FIXME: wrangle m1 binutils
