[package]
name = "pro"
version = "0.0.4"
edition = "2021"
license = "Polyform-Noncommercial-1.0.0+ OR LicenseRef-PolyForm-Free-Trial-1.0.0+"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.0"
lsp-types = "0.94.0"
lazy_static = "1.4.0"
toml = { version = "0.7.5", optional = true }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.20.10"
tracing = { version = "0.1", optional = true }

[dependencies.base]
path = "../base"
default-features = false


[features]
cli = ["base/cli"]
tracing = ["base/tracing", "dep:tracing"]

# TODO: separate error reporting feature
telemetry = ["tracing", "base/telemetry"]

toml_config = ["toml/preserve_order"]

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
[[bin]]
name = "pro_language_server"
required-features = ["cli"]

[target.aarch64-apple-darwin]
debug = false # FIXME: wrangle m1 binutils
